2006-09-04 00:23 Nicolas Roard <nicolas@roard.com>

	* Source/NSBitmapImageRep+JPEG.m: Added JPEG writing support to 
	NSBitmapImageRep. Only handles RGB images (NS*RGBColorSpace). 
	You can specify the compression ratio by using the 
	NSImageCompressionFactor key in the properties dictionary.

2006-09-03 12:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSStandardWindowDecorationView.m: Put back RELEASE to
	prevent memory leak.
	* Source/NSControl.m: Reverted last change.
	* Source/NSWindow.m: Added autogsdoc comments to methods.

2006-08-31 00:21-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSStandardWindowDecorationView.m: Correct issue in 
	initWithFrame:window: that was causing a crash when the window 
	was closed.
	* Source/NSControl.m: Reinstated fix from Fred Kiefer for 
	mouseDown: simplification and refactoring. 

2006-08-29  Adam Fedor  <fedor@gnu.org>

	* Documentation/ReleaseNotes.gsdoc: Updates.

2006-08-28 00:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.11.0
	
2006-08-26 22:30-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoader.m: loadModelData:... Remove TEST_RELEASE 
	from handler block.
	* Source/NSColor.m: initWithCoder: retain autoreleased instances
	of NSColor to prevent double release when the pool is cleared.
	* Source/NSControl.m: initWithCoder: retain cell to prevent
	double release when the pool is cleared.
	* Source/NSFont.m: initWithCoder: retain autoreleased instances
	of NSFont to prevent double release when the pool is cleared.

2006-08-26 18:25-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: initWithCoder: minor cleanup.
	* Source/NSTextFieldCell.m: Retain text/background colors to 
	prevent crash.

2006-08-26 10:01-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: In [NSIBObjectData initWithCoder:] 
	clean up the buildMap calls.  In NSCustomResource retain the resource